Update appsettings and launch settings; add API versioning support and group names for controllers

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -11,7 +11,8 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
       }
     },
     "WriteTo": [
