--- a/src/BffGateway.Infrastructure/BffGateway.Infrastructure.csproj
+++ b/src/BffGateway.Infrastructure/BffGateway.Infrastructure.csproj
@@ -18,4 +18,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
 </Project>
