Refactor latency handling in Auth and Payment controllers; update appsettings to include configurable latency parameters for authentication and payment processes, and adjust load test thresholds for improved performance metrics.

--- a/src/MockProvider/appsettings.Development.json
+++ b/src/MockProvider/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Latency": {
+    "AuthMinMs": 70,
+    "AuthMaxMs": 75,
+    "PayMinMs": 70,
+    "PayMaxMs": 75
   }
 }
