--- a/src/MockProvider/appsettings.json
+++ b/src/MockProvider/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:5001"
+  "Urls": "http://localhost:5001",
+  "Latency": {
+    "AuthMinMs": 50,
+    "AuthMaxMs": 70,
+    "PayMinMs": 50,
+    "PayMaxMs": 70
+  }
 }
