Enhance Dependency Injection and ProviderClient with improved logging and circuit breaker handling; propagate correlation IDs in ForwardHeadersHandler, and update appsettings for Serilog configuration and OpenTelemetry integration.

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console"],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Enrichers.Environment",
+      "Serilog.Enrichers.Thread"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -19,14 +23,17 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
     ],
-    "Enrich": ["FromLogContext"],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
     "Properties": {
       "Application": "BffGateway"
     }
+  },
+  "Observability": {
+    "EnableOpenTelemetry": false
   },
   "Provider": {
     "BaseUrl": "http://localhost:5001",
