Update appsettings and LatencyOptions to include AuthTimeoutMs and PayTimeoutMs; modify Auth and Payment controllers to utilize these new timeout settings for improved request handling.

--- a/src/MockProvider/appsettings.Development.json
+++ b/src/MockProvider/appsettings.Development.json
@@ -9,6 +9,8 @@
     "AuthMinMs": 70,
     "AuthMaxMs": 75,
     "PayMinMs": 70,
-    "PayMaxMs": 75
+    "PayMaxMs": 75,
+    "AuthTimeoutMs": 5000,
+    "PayTimeoutMs": 5000
   }
 }
