--- a/src/MockProvider/appsettings.json
+++ b/src/MockProvider/appsettings.json
@@ -11,6 +11,8 @@
     "AuthMinMs": 50,
     "AuthMaxMs": 70,
     "PayMinMs": 50,
-    "PayMaxMs": 70
+    "PayMaxMs": 70,
+    "AuthTimeoutMs": 5000,
+    "PayTimeoutMs": 5000
   }
 }
