Update quick-circuit-breaker-test to increase pre-allocated VUs from 2 to 5 and modify login scenario to 'Fail' for enhanced testing accuracy. Adjust appsettings.json formatting for consistency without changing functionality.

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -23,7 +23,8 @@
       {
         "Name": "Console",
         "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext} {Message:lj}{NewLine}{Exception}",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
         }
       }
     ],
