multi-language support across the application.

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -36,6 +36,11 @@
   "Observability": {
     "EnableOpenTelemetry": false
   },
+  "Localization": {
+    "SupportedCultures": ["en", "ar"],
+    "DefaultCulture": "en",
+    "ResourcesPath": "Resources"
+  },
   "Provider": {
     "BaseUrl": "http://localhost:5001",
     "TimeoutSeconds": 30,
