--- a/src/BffGateway.WebApi/BffGateway.WebApi.csproj
+++ b/src/BffGateway.WebApi/BffGateway.WebApi.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
