Add Serilog for structured logging and enhance logging configuration
- Introduced Serilog and its extensions for improved logging capabilities.
- Updated appsettings to configure Serilog with console and file sinks, including structured logging options.
- Modified DependencyInjection to register necessary logging services and handlers.
- Replaced basic Serilog request logging with a custom middleware for comprehensive structured logging.
- Adjusted logging levels for Microsoft namespaces to optimize log output.

--- a/src/BffGateway.WebApi/appsettings.Development.json
+++ b/src/BffGateway.WebApi/appsettings.Development.json
@@ -1,8 +1,31 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug"
-    }
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information",
+        "Microsoft.AspNetCore.HttpLogging": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/bff-gateway-dev-.json",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 3,
+          "fileSizeLimitBytes": 52428800,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ]
   },
   "Provider": {
     "BaseUrl": "http://localhost:5001"
