--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -8,6 +8,8 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Formatting.Compact",
       "Serilog.Enrichers.Environment",
       "Serilog.Enrichers.Thread"
     ],
@@ -16,21 +18,37 @@
       "Override": {
         "Microsoft": "Warning",
         "System": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.HttpLogging": "Information"
       }
     },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext} {Message:lj}{NewLine}{Exception}",
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/bff-gateway-.json",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "fileSizeLimitBytes": 104857600,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithEnvironmentName"
+    ],
     "Properties": {
-      "Application": "BffGateway"
+      "Application": "BffGateway",
+      "Version": "1.0.0"
     }
   },
   "Observability": {
