--- a/src/BffGateway.Infrastructure/BffGateway.Infrastructure.csproj
+++ b/src/BffGateway.Infrastructure/BffGateway.Infrastructure.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    <PackageReference Include="Serilog" Version="4.1.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
