Enhance observability and logging capabilities
- Enable OpenTelemetry in appsettings and configure OTLP exporter settings.
- Update StructuredHttpLoggingHandler and StructuredRequestLoggingMiddleware to include TraceId and SpanId for better distributed tracing.
- Refactor ObservabilityExtensions to support OTLP exporter for both tracing and metrics, enriching HTTP request and response logging with content length information.
- Add OpenTelemetry protocol package reference to the project.

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -52,7 +52,11 @@
     }
   },
   "Observability": {
-    "EnableOpenTelemetry": false
+    "EnableOpenTelemetry": true,
+    "Otlp": {
+      "Endpoint": "http://localhost:18889",
+      "Protocol": "Grpc"
+    }
   },
   "Localization": {
     "SupportedCultures": ["en", "ar"],
