Update configuration settings for performance and mock providers
- Change BFF base URL from "http://localhost:5000" to "http://localhost:5180".
- Update passwords in load test data to use capitalized letters for consistency.
- Modify appsettings in BffGateway.WebApi to change BaseUrl from "http://localhost:5001" to "http://localhost:5101".
- Set "Urls" in MockProvider appsettings to "http://0.0.0.0:8080" for better accessibility in development.

--- a/src/MockProvider/appsettings.json
+++ b/src/MockProvider/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:5001",
+  "Urls": "http://0.0.0.0:8080",
   "Latency": {
     "AuthMinMs": 50,
     "AuthMaxMs": 70,
