--- a/src/MockProvider/appsettings.Development.json
+++ b/src/MockProvider/appsettings.Development.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Urls": "http://0.0.0.0:8080",
+  "AllowedHosts": "*",
   "Latency": {
     "AuthMinMs": 70,
     "AuthMaxMs": 75,
