--- a/src/BffGateway.WebApi/appsettings.Development.json
+++ b/src/BffGateway.WebApi/appsettings.Development.json
@@ -1,5 +1,20 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "System": "Information",
+      "Microsoft.AspNetCore": "Information"
+    }
+  },
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Formatting.Compact",
+      "Serilog.Enrichers.Environment",
+      "Serilog.Enrichers.Thread"
+    ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -26,6 +41,13 @@
         }
       }
     ]
+  },
+  "Observability": {
+    "EnableOpenTelemetry": true,
+    "Otlp": {
+      "Endpoint": "http://localhost:18889",
+      "Protocol": "Grpc"
+    }
   },
   "Provider": {
     "BaseUrl": "http://localhost:5001"
