Refactor DTOs and Update Mock Provider Clients for Improved Encapsulation and Configuration
- Changed LoginResponseDto and GetLiveHealthCommand to sealed records for better encapsulation.
- Updated HealthEntryDto and HealthReportDto to use records instead of classes for immutability.
- Refactored MockProvider clients to utilize centralized endpoint configurations and improved logging.
- Modified appsettings to include new endpoint configurations and timeout settings for better provider management.

--- a/src/BffGateway.WebApi/appsettings.Development.json
+++ b/src/BffGateway.WebApi/appsettings.Development.json
@@ -50,6 +50,25 @@
     }
   },
   "Provider": {
-    "BaseUrl": "http://localhost:5001"
+    "BaseUrl": "http://localhost:5101",
+    "TimeoutSeconds": 30,
+    "ConnectTimeoutSeconds": 10,
+    "Endpoints": {
+      "Authenticate": "/api/authenticate",
+      "Pay": "/api/pay",
+      "HealthPing": "/api/ping",
+      "ScenarioQueryName": "scenario"
+    },
+    "Retry": {
+      "MaxRetries": 3,
+      "BaseDelayMs": 1000,
+      "MaxJitterMs": 500
+    },
+    "CircuitBreaker": {
+      "FailureThreshold": 5,
+      "SamplingDurationSeconds": 60,
+      "MinimumThroughput": 10,
+      "DurationOfBreakSeconds": 30
+    }
   }
 }
