--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -67,6 +67,12 @@
     "BaseUrl": "http://localhost:5101",
     "TimeoutSeconds": 30,
     "ConnectTimeoutSeconds": 10,
+    "Endpoints": {
+      "Authenticate": "/api/authenticate",
+      "Pay": "/api/pay",
+      "HealthPing": "/api/ping",
+      "ScenarioQueryName": "scenario"
+    },
     "Retry": {
       "MaxRetries": 3,
       "BaseDelayMs": 1000,
