--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -59,7 +59,7 @@
     }
   },
   "Localization": {
-    "SupportedCultures": ["en", "ar"],
+    "SupportedLanguages": ["en", "ar"],
     "DefaultCulture": "en",
     "ResourcesPath": "Resources"
   },
