Implement Logging Masking Configuration and Update Makefile Commands
- Added LoggingMaskingOptions configuration to appsettings for sensitive headers and body fields.
- Updated StructuredHttpLoggingHandler and StructuredRequestLoggingMiddleware to utilize the new logging masking options.

--- a/src/BffGateway.WebApi/appsettings.Development.json
+++ b/src/BffGateway.WebApi/appsettings.Development.json
@@ -49,6 +49,31 @@
       "Protocol": "Grpc"
     }
   },
+  "LoggingMasking": {
+    "SensitiveHeaders": [
+      "Authorization",
+      "Cookie",
+      "Set-Cookie",
+      "X-API-Key",
+      "Authentication",
+      "Proxy-Authorization",
+      "WWW-Authenticate"
+    ],
+    "SensitiveBodyFields": [
+      "password",
+      "pwd",
+      "token",
+      "secret",
+      "key",
+      "authorization",
+      "cardNumber",
+      "cvv",
+      "pin",
+      "ssn",
+      "creditCard"
+    ],
+    "MaxBodySize": 8192
+  },
   "Provider": {
     "BaseUrl": "http://localhost:5101",
     "TimeoutSeconds": 30,
