--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -63,6 +63,31 @@
     "DefaultCulture": "en",
     "ResourcesPath": "Resources"
   },
+  "LoggingMasking": {
+    "SensitiveHeaders": [
+      "Authorization",
+      "Cookie",
+      "Set-Cookie",
+      "X-API-Key",
+      "Authentication",
+      "Proxy-Authorization",
+      "WWW-Authenticate"
+    ],
+    "SensitiveBodyFields": [
+      "password",
+      "pwd",
+      "token",
+      "secret",
+      "key",
+      "authorization",
+      "cardNumber",
+      "cvv",
+      "pin",
+      "ssn",
+      "creditCard"
+    ],
+    "MaxBodySize": 8192
+  },
   "Provider": {
     "BaseUrl": "http://localhost:5101",
     "TimeoutSeconds": 30,
