Update Makefile and Enhance Observability Configuration
- Increased BFF load test parameters for quicker performance testing.
- Modified Docker Compose commands to ensure images are rebuilt on startup.
- Enabled Serilog and OTLP sink options in appsettings for improved logging capabilities.
- Updated Program.cs to conditionally configure Serilog based on settings.
- Adjusted MiddlewareExtensions to use structured logging only if Serilog is enabled.
- Set timeout values to zero in MockProvider configuration for faster response simulation.

--- a/src/BffGateway.WebApi/appsettings.json
+++ b/src/BffGateway.WebApi/appsettings.json
@@ -52,7 +52,9 @@
     }
   },
   "Observability": {
+    "EnableSerilog": true,
     "EnableOpenTelemetry": true,
+    "EnableSerilogOtlpSink": true,
     "Otlp": {
       "Endpoint": "http://localhost:18889",
       "Protocol": "Grpc"
