--- a/src/BffGateway.WebApi/appsettings.Development.json
+++ b/src/BffGateway.WebApi/appsettings.Development.json
@@ -43,7 +43,9 @@
     ]
   },
   "Observability": {
+    "EnableSerilog": true,
     "EnableOpenTelemetry": true,
+    "EnableSerilogOtlpSink": true,
     "Otlp": {
       "Endpoint": "http://localhost:18889",
       "Protocol": "Grpc"
